@@ -28,3 +28,4 @@
 ( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/plugin.c;  ) > 0.7.1cvs2.patchset
 ( cvs diff -u -r 1.1.2.39 -r 1.1.2.40 configure.ac;  ) > 0.7.1cvs3.patchset
 ( cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/Makefile.am;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/smime.c;  ) > 0.7.2cvs1.patchset
+( cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/smime.c;  ) > 0.7.2cvs2.patchset
